# atollis

./: .gitignore  CMakeLists.txt  README.md  main.cpp
header/: triangulation.h  working_with_file.h
source/: triangulation.cpp  working_with_file.cpp
tmp_files/: tmp_input_wwf.xyz
